Implementar sistema de impuestos en productos y servicios para generar facturas

--- a/lang/en.json
+++ b/lang/en.json
@@ -579,5 +579,60 @@
     "Septiembre": "September",
     "Octubre": "October",
     "Noviembre": "November",
-    "Diciembre": "December"
+    "Diciembre": "December",
+    "Facturas": "Invoices",
+    "FACTURAS": "INVOICES",
+    "Facturas Emitidas": "Issued Invoices",
+    "Generar Factura": "Generate Invoice",
+    "Nueva Factura": "New Invoice",
+    "Datos de la Mesa": "Table Data",
+    "Datos del Cliente": "Customer Data",
+    "Datos del Emisor": "Issuer Data",
+    "Preview de la Factura": "Invoice Preview",
+    "Líneas de Detalle": "Detail Lines",
+    "Desglose de IVA": "VAT Breakdown",
+    "Base Imponible": "Taxable Base",
+    "Cuota IVA": "VAT Amount",
+    "Tipo IVA": "VAT Type",
+    "Total IVA": "Total VAT",
+    "IVA %": "VAT %",
+    "IVA (%)": "VAT (%)",
+    "Imp. IVA": "VAT Amt.",
+    "Base Imp.": "Tax. Base",
+    "Importe IVA": "VAT Amount",
+    "Nº Factura": "Invoice No.",
+    "Cliente": "Customer",
+    "Cliente Final": "Final Customer",
+    "Nombre/Razón Social": "Name/Business Name",
+    "NIF/CIF": "Tax ID",
+    "Subtotal": "Subtotal",
+    "Total Facturas": "Total Invoices",
+    "Total Importe": "Total Amount",
+    "Acciones": "Actions",
+    "Ver detalle": "View detail",
+    "Descargar PDF": "Download PDF",
+    "Volver al listado": "Back to list",
+    "Detalle de la Factura": "Invoice Detail",
+    "Resumen del Importe": "Amount Summary",
+    "TOTAL A PAGAR": "TOTAL TO PAY",
+    "Información": "Information",
+    "Creada": "Created",
+    "Factura generada el": "Invoice generated on",
+    "Gracias por su confianza": "Thank you for your trust",
+    "FACTURA": "INVOICE",
+    "Fecha de emisión": "Issue date",
+    "Camarero": "Waiter",
+    "Pagado": "Paid",
+    "0% - Exento": "0% - Exempt",
+    "4% - Superreducido": "4% - Super Reduced",
+    "10% - Reducido": "10% - Reduced",
+    "21% - General": "21% - Standard",
+    "Por defecto 21% (IVA general en España)": "Default 21% (Standard VAT in Spain)",
+    "Dejar en blanco para factura genérica": "Leave blank for generic invoice",
+    "Opcional": "Optional",
+    "No hay facturas en este período": "No invoices in this period",
+    "Uds": "Units",
+    "P.Unit": "Unit P.",
+    "TOTALES": "TOTALS",
+    "Cant.": "Qty."
 }
