--- a/lang/es.json
+++ b/lang/es.json
@@ -564,5 +564,60 @@
     "Septiembre": "Septiembre",
     "Octubre": "Octubre",
     "Noviembre": "Noviembre",
-    "Diciembre": "Diciembre"
+    "Diciembre": "Diciembre",
+    "Facturas": "Facturas",
+    "FACTURAS": "FACTURAS",
+    "Facturas Emitidas": "Facturas Emitidas",
+    "Generar Factura": "Generar Factura",
+    "Nueva Factura": "Nueva Factura",
+    "Datos de la Mesa": "Datos de la Mesa",
+    "Datos del Cliente": "Datos del Cliente",
+    "Datos del Emisor": "Datos del Emisor",
+    "Preview de la Factura": "Preview de la Factura",
+    "Líneas de Detalle": "Líneas de Detalle",
+    "Desglose de IVA": "Desglose de IVA",
+    "Base Imponible": "Base Imponible",
+    "Cuota IVA": "Cuota IVA",
+    "Tipo IVA": "Tipo IVA",
+    "Total IVA": "Total IVA",
+    "IVA %": "IVA %",
+    "IVA (%)": "IVA (%)",
+    "Imp. IVA": "Imp. IVA",
+    "Base Imp.": "Base Imp.",
+    "Importe IVA": "Importe IVA",
+    "Nº Factura": "Nº Factura",
+    "Cliente": "Cliente",
+    "Cliente Final": "Cliente Final",
+    "Nombre/Razón Social": "Nombre/Razón Social",
+    "NIF/CIF": "NIF/CIF",
+    "Subtotal": "Subtotal",
+    "Total Facturas": "Total Facturas",
+    "Total Importe": "Total Importe",
+    "Acciones": "Acciones",
+    "Ver detalle": "Ver detalle",
+    "Descargar PDF": "Descargar PDF",
+    "Volver al listado": "Volver al listado",
+    "Detalle de la Factura": "Detalle de la Factura",
+    "Resumen del Importe": "Resumen del Importe",
+    "TOTAL A PAGAR": "TOTAL A PAGAR",
+    "Información": "Información",
+    "Creada": "Creada",
+    "Factura generada el": "Factura generada el",
+    "Gracias por su confianza": "Gracias por su confianza",
+    "FACTURA": "FACTURA",
+    "Fecha de emisión": "Fecha de emisión",
+    "Camarero": "Camarero",
+    "Pagado": "Pagado",
+    "0% - Exento": "0% - Exento",
+    "4% - Superreducido": "4% - Superreducido",
+    "10% - Reducido": "10% - Reducido",
+    "21% - General": "21% - General",
+    "Por defecto 21% (IVA general en España)": "Por defecto 21% (IVA general en España)",
+    "Dejar en blanco para factura genérica": "Dejar en blanco para factura genérica",
+    "Opcional": "Opcional",
+    "No hay facturas en este período": "No hay facturas en este período",
+    "Uds": "Uds",
+    "P.Unit": "P.Unit",
+    "TOTALES": "TOTALES",
+    "Cant.": "Cant."
 }
