--- a/lang/es.json
+++ b/lang/es.json
@@ -390,7 +390,6 @@
     "Total facturado en": "Total facturado en",
     "Facturación mensual": "Facturación mensual",
     "Distribución anual": "Distribución anual",
-    "Ingresos": "Ingresos",
     "Gastos": "Gastos",
     "Total ingresos": "Total ingresos",
     "Total gastos": "Total gastos",
@@ -553,18 +552,6 @@
     "Jueves": "Jueves",
     "Viernes": "Viernes",
     "Sábado": "Sábado",
-    "Enero": "Enero",
-    "Febrero": "Febrero",
-    "Marzo": "Marzo",
-    "Abril": "Abril",
-    "Mayo": "Mayo",
-    "Junio": "Junio",
-    "Julio": "Julio",
-    "Agosto": "Agosto",
-    "Septiembre": "Septiembre",
-    "Octubre": "Octubre",
-    "Noviembre": "Noviembre",
-    "Diciembre": "Diciembre",
     "Facturas": "Facturas",
     "FACTURAS": "FACTURAS",
     "Facturas Emitidas": "Facturas Emitidas",
@@ -619,5 +606,14 @@
     "Uds": "Uds",
     "P.Unit": "P.Unit",
     "TOTALES": "TOTALES",
-    "Cant.": "Cant."
+    "Cant.": "Cant.",
+    "MI CUENTA": "MI CUENTA",
+    "CONTACTO": "CONTACTO",
+    "CERRAR SESIÓN": "CERRAR SESIÓN",
+    "Bienvenido": "Bienvenido",
+    "Nº": "Nº",
+    "Calle, número, ciudad, código postal": "Calle, número, ciudad, código postal",
+    "Error al acceder a la cámara:": "Error al acceder a la cámara:",
+    "Scanner y cámara detenidos": "Scanner y cámara detenidos",
+    "Quagga inicializado correctamente": "Quagga inicializado correctamente"
 }
