--- a/lang/es.json
+++ b/lang/es.json
@@ -1,4 +1,6 @@
 {
+    "Días de antelación para recordatorio": "Días de antelación para recordatorio",
+    "Se enviará un recordatorio a los usuarios que tengan reservas en el/los día(s) siguiente(s)": "Se enviará un recordatorio a los usuarios que tengan reservas en el/los día(s) siguiente(s)",
     "(and :count more error)": "(y :count error más)",
     "(and :count more errors)": "(y :count errores más)",
     "A fresh verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su correo electrónico.",
