Cambiar texto de Socio por Usuario

--- a/lang/es.json
+++ b/lang/es.json
@@ -146,6 +146,7 @@
     "SERVICIOS": "SERVICIOS",
     "INFORMES": "INFORMES",
     "BALANCE POR SOCIO": "BALANCE POR USUARIO",
+    "SOCIO": "Usuario",
     "Licencias": "Licencias",
     "LICENCIAS": "LICENCIAS",
     "Logo": "Logo",
@@ -497,7 +498,7 @@
     "Error al eliminar la mesa: :error": "Error al eliminar la mesa: :error",
     "Eliminar mesa": "Eliminar mesa",
     "Ventas por Producto": "Ventas por Producto",
-    "Ventas por Camarero": "Ventas por Camarero",
+    "Ventas por Camarero": "Ventas por Usuario",
     "Ocupación de Mesas": "Ocupación de Mesas",
     "Análisis de Horas Pico": "Análisis de Horas Pico",
     "Ranking": "Ranking",
@@ -521,7 +522,7 @@
     "Actividad": "Actividad",
     "Rendimiento": "Rendimiento",
     "No hay datos para el período seleccionado": "No hay datos para el período seleccionado",
-    "Ventas por Socio": "Ventas por Socio",
+    "Ventas por Socio": "Ventas por Usuario",
     "Evolución Temporal": "Evolución Temporal",
     "Rentabilidad de Productos": "Rentabilidad de Productos",
     "Total Compras": "Total Compras",
