--- a/lang/en.json
+++ b/lang/en.json
@@ -141,7 +141,6 @@
     "USUARIOS": "USERS",
     "FAMILIAS": "FAMILIES",
     "PRODUCTOS": "PRODUCTS",
-    "Producto": "Product",
     "Total": "Total",
     "SERVICIOS": "SERVICES",
     "INFORMES": "REPORTS",
@@ -522,7 +521,7 @@
     "Actividad": "Activity",
     "Rendimiento": "Performance",
     "No hay datos para el período seleccionado": "No data for the selected period",
-    "Ventas por Socio": "Sales by Member",
+    "Ventas por Socio": "Sales by User",
     "Evolución Temporal": "Time Evolution",
     "Rentabilidad de Productos": "Product Profitability",
     "Total Compras": "Total Purchases",
@@ -538,7 +537,6 @@
     "Margen Promedio": "Average Margin",
     "Precio Venta": "Sale Price",
     "Coste": "Cost",
-    "Ingresos": "Revenue",
     "Costes": "Costs",
     "Beneficio": "Profit",
     "Margen %": "Margin %",
@@ -548,20 +546,11 @@
     "Alto": "High",
     "Precio Unit.": "Unit Price",
     "% del Total": "% of Total",
-    "Fecha inicial": "Start date",
-    "Fecha final": "End date",
     "Buscar": "Search",
-    "Volver": "Back",
-    "Socio": "Member",
-    "Fecha": "Date",
+    "Socio": "User",
     "Mes": "Month",
     "Producto": "Product",
-    "Familia": "Family",
     "Unidades": "Units",
-    "Descripción": "Description",
-    "Mesa": "Table",
-    "Camarero": "Waiter",
-    "Hora": "Hour",
     "Día": "Day",
     "Domingo": "Sunday",
     "Lunes": "Monday",
@@ -570,18 +559,6 @@
     "Jueves": "Thursday",
     "Viernes": "Friday",
     "Sábado": "Saturday",
-    "Enero": "January",
-    "Febrero": "February",
-    "Marzo": "March",
-    "Abril": "April",
-    "Mayo": "May",
-    "Junio": "June",
-    "Julio": "July",
-    "Agosto": "August",
-    "Septiembre": "September",
-    "Octubre": "October",
-    "Noviembre": "November",
-    "Diciembre": "December",
     "Facturas": "Invoices",
     "FACTURAS": "INVOICES",
     "Facturas Emitidas": "Issued Invoices",
